// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VMonthPicker.js should match snapshot with allowed dates 1`] = `

<div class="card picker picker--date picker--month theme--light"
     style="height: auto;"
>
  <div class="picker__title">
    <div class="picker--date__title-year">
      2013
    </div>
    <div class="picker--date__title-date active">
      <div>
        May
      </div>
    </div>
  </div>
  <div class="picker__body">
    <div class="picker--date__header">
      <div class="picker--date__header-selector">
        <button type="button"
                class="btn btn--icon btn--raised"
        >
          <div class="btn__content">
            <i class="material-icons icon">
              chevron_left
            </i>
          </div>
        </button>
        <div class="picker--date__header-selector-date">
          <strong>
            2013
          </strong>
        </div>
        <button type="button"
                class="btn btn--icon btn--raised"
        >
          <div class="btn__content">
            <i class="material-icons icon">
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
    <div class="picker--date__table">
      <table>
        <tbody>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat btn--disabled"
              >
                <span class="btn__content">
                  Jan
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat btn--disabled"
              >
                <span class="btn__content">
                  Feb
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Mar
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Apr
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--active"
              >
                <span class="btn__content">
                  May
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Jun
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Jul
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Aug
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Sep
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Oct
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat btn--disabled"
              >
                <span class="btn__content">
                  Nov
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat btn--disabled"
              >
                <span class="btn__content">
                  Dec
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>

`;

exports[`VMonthPicker.js should match snapshot with dark theme 1`] = `

<div class="card picker picker--date picker--month theme--light theme--dark"
     style="height: auto;"
>
  <div class="picker__title">
    <div class="picker--date__title-year">
      2013
    </div>
    <div class="picker--date__title-date active">
      <div>
        May
      </div>
    </div>
  </div>
  <div class="picker__body">
    <div class="picker--date__header">
      <div class="picker--date__header-selector">
        <button type="button"
                class="btn btn--icon btn--raised theme--dark"
        >
          <div class="btn__content">
            <i class="material-icons icon">
              chevron_left
            </i>
          </div>
        </button>
        <div class="picker--date__header-selector-date">
          <strong>
            2013
          </strong>
        </div>
        <button type="button"
                class="btn btn--icon btn--raised theme--dark"
        >
          <div class="btn__content">
            <i class="material-icons icon">
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
    <div class="picker--date__table">
      <table>
        <tbody>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat btn--light"
              >
                <span class="btn__content">
                  Jan
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat btn--light"
              >
                <span class="btn__content">
                  Feb
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat btn--light"
              >
                <span class="btn__content">
                  Mar
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat btn--light"
              >
                <span class="btn__content">
                  Apr
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--active btn--light"
              >
                <span class="btn__content">
                  May
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat btn--light"
              >
                <span class="btn__content">
                  Jun
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat btn--light"
              >
                <span class="btn__content">
                  Jul
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat btn--light"
              >
                <span class="btn__content">
                  Aug
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat btn--light"
              >
                <span class="btn__content">
                  Sep
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat btn--light"
              >
                <span class="btn__content">
                  Oct
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat btn--light"
              >
                <span class="btn__content">
                  Nov
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat btn--light"
              >
                <span class="btn__content">
                  Dec
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>

`;

exports[`VMonthPicker.js should match snapshot with default settings 1`] = `

<div class="card picker picker--date picker--month theme--light"
     style="height: auto;"
>
  <div class="picker__title">
    <div class="picker--date__title-year">
      2013
    </div>
    <div class="picker--date__title-date active">
      <div>
        May
      </div>
    </div>
  </div>
  <div class="picker__body">
    <div class="picker--date__header">
      <div class="picker--date__header-selector">
        <button type="button"
                class="btn btn--icon btn--raised"
        >
          <div class="btn__content">
            <i class="material-icons icon">
              chevron_left
            </i>
          </div>
        </button>
        <div class="picker--date__header-selector-date">
          <strong>
            2013
          </strong>
        </div>
        <button type="button"
                class="btn btn--icon btn--raised"
        >
          <div class="btn__content">
            <i class="material-icons icon">
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
    <div class="picker--date__table">
      <table>
        <tbody>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Jan
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Feb
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Mar
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Apr
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--active"
              >
                <span class="btn__content">
                  May
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Jun
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Jul
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Aug
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Sep
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Oct
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Nov
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Dec
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>

`;

exports[`VMonthPicker.js should match snapshot with no title 1`] = `

<div class="card picker picker--date picker--month theme--light"
     style="height: auto;"
>
  <div class="picker__body">
    <div class="picker--date__header">
      <div class="picker--date__header-selector">
        <button type="button"
                class="btn btn--icon btn--raised"
        >
          <div class="btn__content">
            <i class="material-icons icon">
              chevron_left
            </i>
          </div>
        </button>
        <div class="picker--date__header-selector-date">
          <strong>
            2013
          </strong>
        </div>
        <button type="button"
                class="btn btn--icon btn--raised"
        >
          <div class="btn__content">
            <i class="material-icons icon">
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
    <div class="picker--date__table">
      <table>
        <tbody>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Jan
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Feb
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Mar
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Apr
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--raised btn--active"
              >
                <span class="btn__content">
                  May
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Jun
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Jul
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Aug
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Sep
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Oct
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Nov
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span class="btn__content">
                  Dec
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>

`;
